--- a/index.html
+++ b/index.html
@@ -3,9 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
+
+<Header>
+  <div class="rubrik-text">Fika & Co.</div>
+      <button class="menu-button">
+        <i class="material-icons">menu</i>
+      </button>
+
+
+
+
+</Header>
+
+<div class="overlay"></div>
+
+
+<nav> 
+  <ul>
+    <li><a href="index.html">Hem</a></li>
+    <li><a href="meny.html"></a>Meny</li>
+    <li><a href="index.html"></a>webb3</li>
+    <li><a href="index.html"></a>webb4</li>
+  </ul>
+</nav>
+
+<section>
+
+
+
+
   
+</section>
+
+<footer>
+  <p>Fika & Co. || Kungsgatan 123, 123 45 Göteborg</p>
+  <p>Telefon: 079-337-3506 || Email: info@fikaandco</p>
+  <p>&copy; 2025 Fika & Co. Alla rättigheter förbehållna.</p>
+</footer>
+
+
+
+
+
+
+
+
+
+
+
+  <script src="js/main.js"></script>
 </body>
 </html>
