Arbetade med att fixa min hamburger meny samt tydliggjorde min struktur med grid-layout för mobilt samt desktop läge

--- a/index.html
+++ b/index.html
@@ -10,20 +10,18 @@
 <body>
 
 <Header>
-  <div class="rubrik-text">Fika & Co.</div>
-      <button class="menu-button">
+  <div class="container">
+   <div class="rubrik-text">Fika & Co.</div>
+     <button class="hamburger-button">
         <i class="material-icons">menu</i>
-      </button>
-
-
-
-
+     </button>
+  </div>
 </Header>
 
 <div class="overlay"></div>
 
 
-<nav> 
+<nav class="main-nav"> 
   <ul>
     <li><a href="index.html">Hem</a></li>
     <li><a href="meny.html"></a>Meny</li>
