--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Document</title>
 </head>
-<body>
+<body class="home-page">
 
 <Header>
   <div class="container">
@@ -30,29 +30,60 @@
   </ul>
 </nav>
 
-<section>
+<main>
+  <section class="banner">  
+    <div class="container">
+       <h1>Välkommen till Fika & Co.</h1>
+       <p>Ditt lokala kafé</p>
+       <a href="meny.html" class="btn">Se vår meny</a>
+    </div>
+  </section>
+
+
+  <section class="offers">
+    <div class="container">
+      <h2>Dagens erbjudanden</h2>
+      <div class="card-grid">
+         <div class="card">
+            <img src="img/test" alt="img1">
+            <h3>xxx</h3>
+            <p>xxxxx</p>
+            <p>500kr</p>
+         </div>
+         <div class="card">
+          <img src="img/test" alt="img2">
+          <h3>xxx</h3>
+          <p>xxxxx</p>
+          <p>500kr</p>
+       </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="hours-section second-background">
+    <div class="container">
+      <h2>Öppettider</h2>
+      <div class="hours">
+        <p> <strong>Måndag - Fredag:</strong> 7:00 - 18:00</p>
+        <p> <strong>Lördag: </strong>7:00 - 16:00</p>
+        <p> <strong>Lördag: </strong>7:00 - 16:00</p>
+      </div>
+    </div>
+  </section>
 
 
 
 
-  
-</section>
+
+</main>
 
 <footer>
-  <p>Fika & Co. || Kungsgatan 123, 123 45 Göteborg</p>
-  <p>Telefon: 079-337-3506 || Email: info@fikaandco</p>
-  <p>&copy; 2025 Fika & Co. Alla rättigheter förbehållna.</p>
+  <div class="container">
+    <p>Fika & Co. || Kungsgatan 123, 123 45 Göteborg</p>
+    <p>Telefon: 079-337-3506 || Email: info@fikaandco</p>
+    <p>&copy; 2025 Fika & Co. Alla rättigheter förbehållna.</p>
+  </div>
 </footer>
-
-
-
-
-
-
-
-
-
-
 
   <script src="js/main.js"></script>
 </body>
