--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <ul>
     <li><a href="index.html">Hem</a></li>
     <li><a href="meny.html"></a>Meny</li>
-    <li><a href="index.html"></a>webb3</li>
+    <li><a href="kalender.html"></a>Kalender</li>
     <li><a href="index.html"></a>webb4</li>
   </ul>
 </nav>
@@ -48,13 +48,13 @@
             <img src="img/test" alt="img1">
             <h3>xxx</h3>
             <p>xxxxx</p>
-            <p>500kr</p>
+            <p class="price">500kr</p>
          </div>
          <div class="card">
           <img src="img/test" alt="img2">
           <h3>xxx</h3>
           <p>xxxxx</p>
-          <p>500kr</p>
+          <p class="price">500kr</p>
        </div>
       </div>
     </div>
