--- a/meny.html
+++ b/meny.html
@@ -25,17 +25,67 @@
   <ul>
     <li><a href="index.html">Hem</a></li>
     <li><a href="meny.html"></a>Meny</li>
-    <li><a href="index.html"></a>webb3</li>
+    <li><a href="kalender.html"></a>Kalender</li>
     <li><a href="index.html"></a>webb4</li>
   </ul>
 </nav>
 
 <main>
+  <div class="page-header">
+    <div class="container">
+      <h1>Vår Meny</h1>
+    </div>
+  </div>
 
+  <section class="foods">
+    <div class="container">
+      <h2>Bakverk</h2>
+      <div class="card-grid">
+         <div class="card">
+            <img src="img/test" alt="img1">
+            <h3>Croissant</h3>
+            <p>xxxxx</p>
+            <p class="price">20kr</p>
+         </div>
+         <div class="card">
+            <img src="img/test" alt="img2">
+            <h3>Kanelbulle</h3>
+            <p>xxxxx</p>
+            <p class="price">25kr</p>
+          </div>
+          <div class="card">
+            <img src="img/test" alt="img3">
+            <h3>Semla</h3>
+            <p>xxxxx</p>
+            <p class="price">29kr</p>
+      </div>
+    </div>
+  </section>
 
-
-
-    
+  <section class="drinks">
+    <div class="container">
+      <h2>Dryck</h2>
+      <div class="card-grid">
+         <div class="card">
+            <img src="img/test" alt="img1">
+            <h3>Bryggkaffe</h3>
+            <p>xxxxx</p>
+            <p class="price">25kr</p>
+         </div>
+         <div class="card">
+            <img src="img/test" alt="img2">
+            <h3>Iskaffe</h3>
+            <p>xxxxx</p>
+            <p class="price">39kr</p>
+          </div>
+          <div class="card">
+            <img src="img/test" alt="img3">
+            <h3>Te</h3>
+            <p>xxxxx</p>
+            <p class="price">25kr</p>
+      </div>
+    </div>
+  </section>
 </main>
 
 
@@ -46,7 +96,7 @@
       <p>Telefon: 079-337-3506 || Email: info@fikaandco</p>
       <p>&copy; 2025 Fika & Co. Alla rättigheter förbehållna.</p>
     </div>
-  </footer>
+</footer>
   
     <script src="js/main.js"></script>
   </body>
