--- a/kalender.html
+++ b/kalender.html
@@ -24,13 +24,110 @@
 <nav class="main-nav"> 
   <ul>
     <li><a href="index.html">Hem</a></li>
-    <li><a href="meny.html"></a>Meny</li>
-    <li><a href="kalender.html"></a>Kalender</li>
-    <li><a href="index.html"></a>webb4</li>
+    <li><a href="meny.html">Meny</a></li>
+    <li><a href="kalender.html">Kalender</a></li>
+    <li><a href="index.html">webb4</a></li>
   </ul>
 </nav>
 
 <main>
+  <div class="page-header">
+    <div class="container">
+      <h1>Kalendarium</h1>
+    </div>
+  </div>
+
+  <section class="calender-section">
+    <div class="container">
+      <h2 class="month">Februari 2025</h2>
+    <table class="calender">
+      <thead>
+      <tr>
+        <th>Mån</th>
+        <th>Tis</th>
+        <th>Ons</th>
+        <th>Tor</th>
+        <th>Fre</th>
+        <th>Lör</th>
+        <th>Sön</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>1</td>
+        <td>2</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>4</td>
+        <td>5</td>
+        <td>6</td>
+        <td>7</td>
+        <td>8</td>
+        <td>9</td>
+      </tr>
+      <tr>
+        <td>10</td>
+        <td>11</td>
+        <td>12</td>
+        <td>13</td>
+        <td>14</td>
+        <td>15</td>
+        <td>16</td>
+      </tr>
+      <tr>
+        <td>17</td>
+        <td>18</td>
+        <td>19</td>
+        <td>20</td>
+        <td>21</td>
+        <td>22</td>
+        <td>23</td>
+      </tr>
+      <tr>
+        <td>24</td>
+        <td>25</td>
+        <td>26</td>
+        <td>27</td>
+        <td>28</td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+    </table>
+  </div>
+  </section>
+
+  <section class="events-section">
+    <div class="container">
+      <h2>Kommande Event</h2>
+      <div class="event-list"></div>
+      <div class="event-item">
+        <div class="event-date">8 Februari</div>
+        <h3>Live Jazz Kväll</h3>
+        <p>hej</p>
+        <p>hej</p>
+      </div>
+      <div class="event-item">
+        <div class="event-date">8 Februari</div>
+        <h3>Live Jazz Kväll</h3>
+        <p>hej</p>
+        <p>hej</p>
+      </div>
+      <div class="event-item">
+        <div class="event-date">8 Februari</div>
+        <h3>Live Jazz Kväll</h3>
+        <p>hej</p>
+        <p>hej</p>
+      </div>
+    </div>
+  </section>
+
 
 </main>
 
