--- a/meny.html
+++ b/meny.html
@@ -24,9 +24,9 @@
 <nav class="main-nav"> 
   <ul>
     <li><a href="index.html">Hem</a></li>
-    <li><a href="meny.html"></a>Meny</li>
-    <li><a href="kalender.html"></a>Kalender</li>
-    <li><a href="index.html"></a>webb4</li>
+    <li><a href="meny.html">Meny</a></li>
+    <li><a href="kalender.html">Kalender</a></li>
+    <li><a href="index.html">webb4</a></li>
   </ul>
 </nav>
 
