--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,84 +8,86 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Document</title>
 </head>
+
 <body class="home-page">
 
-<Header>
-  <div class="container">
-   <div class="rubrik-text">Fika & Co.</div>
-     <button class="hamburger-button">
+  <Header>
+    <div class="container">
+      <div class="rubrik-text">Fika & Co.</div>
+      <button class="hamburger-button">
         <i class="material-icons">menu</i>
-     </button>
-  </div>
-</Header>
-
-<div class="overlay"></div>
-
-
-<nav class="main-nav"> 
-  <ul>
-    <li><a href="index.html">Hem</a></li>
-    <li><a href="meny.html">Meny</a></li>
-    <li><a href="kalender.html">Kalender</a></li>
-    <li><a href="index.html">webb4</a></li>
-  </ul>
-</nav>
-
-<main>
-  <section class="banner">  
-    <div class="container">
-       <h1>Välkommen till Fika & Co.</h1>
-       <p>Ditt lokala kafé</p>
-       <a href="meny.html" class="btn">Se vår meny</a>
+      </button>
     </div>
-  </section>
+  </Header>
+
+  <div class="overlay"></div>
 
 
-  <section class="offers">
-    <div class="container">
-      <h2>Dagens erbjudanden</h2>
-      <div class="card-grid">
-         <div class="card">
+  <nav class="main-nav">
+    <ul>
+      <li><a href="index.html">Hem</a></li>
+      <li><a href="meny.html">Meny</a></li>
+      <li><a href="kalender.html">Kalender</a></li>
+      <li><a href="bestall.html">webb4</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section class="banner">
+      <div class="container">
+        <h1>Välkommen till Fika & Co.</h1>
+        <p>Ditt lokala kafé</p>
+        <a href="meny.html" class="btn">Se vår meny</a>
+      </div>
+    </section>
+
+
+    <section class="offers">
+      <div class="container">
+        <h2>Dagens erbjudanden</h2>
+        <div class="card-grid">
+          <div class="card">
             <img src="img/test" alt="img1">
             <h3>xxx</h3>
             <p>xxxxx</p>
             <p class="price">500kr</p>
-         </div>
-         <div class="card">
-          <img src="img/test" alt="img2">
-          <h3>xxx</h3>
-          <p>xxxxx</p>
-          <p class="price">500kr</p>
-       </div>
+          </div>
+          <div class="card">
+            <img src="img/test" alt="img2">
+            <h3>xxx</h3>
+            <p>xxxxx</p>
+            <p class="price">500kr</p>
+          </div>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="hours-section second-background">
+    <section class="hours-section second-background">
+      <div class="container">
+        <h2>Öppettider</h2>
+        <div class="hours">
+          <p> <strong>Måndag - Fredag:</strong> 7:00 - 18:00</p>
+          <p> <strong>Lördag: </strong>7:00 - 16:00</p>
+          <p> <strong>Lördag: </strong>7:00 - 16:00</p>
+        </div>
+      </div>
+    </section>
+
+
+
+
+
+  </main>
+
+  <footer>
     <div class="container">
-      <h2>Öppettider</h2>
-      <div class="hours">
-        <p> <strong>Måndag - Fredag:</strong> 7:00 - 18:00</p>
-        <p> <strong>Lördag: </strong>7:00 - 16:00</p>
-        <p> <strong>Lördag: </strong>7:00 - 16:00</p>
-      </div>
+      <p>Fika & Co. || Kungsgatan 123, 123 45 Göteborg</p>
+      <p>Telefon: 079-337-3506 || Email: info@fikaandco</p>
+      <p>&copy; 2025 Fika & Co. Alla rättigheter förbehållna.</p>
     </div>
-  </section>
-
-
-
-
-
-</main>
-
-<footer>
-  <div class="container">
-    <p>Fika & Co. || Kungsgatan 123, 123 45 Göteborg</p>
-    <p>Telefon: 079-337-3506 || Email: info@fikaandco</p>
-    <p>&copy; 2025 Fika & Co. Alla rättigheter förbehållna.</p>
-  </div>
-</footer>
+  </footer>
 
   <script src="js/main.js"></script>
 </body>
+
 </html>
