--- a/meny.html
+++ b/meny.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,47 +8,48 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Document</title>
 </head>
+
 <body class="menu-page">
 
-<Header>
-  <div class="container">
-   <div class="rubrik-text">Fika & Co.</div>
-     <button class="hamburger-button">
+  <Header>
+    <div class="container">
+      <div class="rubrik-text">Fika & Co.</div>
+      <button class="hamburger-button">
         <i class="material-icons">menu</i>
-     </button>
-  </div>
-</Header>
-
-<div class="overlay"></div>
-
-
-<nav class="main-nav"> 
-  <ul>
-    <li><a href="index.html">Hem</a></li>
-    <li><a href="meny.html">Meny</a></li>
-    <li><a href="kalender.html">Kalender</a></li>
-    <li><a href="index.html">webb4</a></li>
-  </ul>
-</nav>
-
-<main>
-  <div class="page-header">
-    <div class="container">
-      <h1>Vår Meny</h1>
+      </button>
     </div>
-  </div>
+  </Header>
 
-  <section class="foods">
-    <div class="container">
-      <h2>Bakverk</h2>
-      <div class="card-grid">
-         <div class="card">
+  <div class="overlay"></div>
+
+
+  <nav class="main-nav">
+    <ul>
+      <li><a href="index.html">Hem</a></li>
+      <li><a href="meny.html">Meny</a></li>
+      <li><a href="kalender.html">Kalender</a></li>
+      <li><a href="bestall.html">webb4</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <div class="page-header">
+      <div class="container">
+        <h1>Vår Meny</h1>
+      </div>
+    </div>
+
+    <section class="foods">
+      <div class="container">
+        <h2>Bakverk</h2>
+        <div class="card-grid">
+          <div class="card">
             <img src="img/test" alt="img1">
             <h3>Croissant</h3>
             <p>xxxxx</p>
             <p class="price">20kr</p>
-         </div>
-         <div class="card">
+          </div>
+          <div class="card">
             <img src="img/test" alt="img2">
             <h3>Kanelbulle</h3>
             <p>xxxxx</p>
@@ -58,21 +60,21 @@
             <h3>Semla</h3>
             <p>xxxxx</p>
             <p class="price">29kr</p>
-      </div>
-    </div>
-  </section>
+          </div>
+        </div>
+    </section>
 
-  <section class="drinks">
-    <div class="container">
-      <h2>Dryck</h2>
-      <div class="card-grid">
-         <div class="card">
+    <section class="drinks">
+      <div class="container">
+        <h2>Dryck</h2>
+        <div class="card-grid">
+          <div class="card">
             <img src="img/test" alt="img1">
             <h3>Bryggkaffe</h3>
             <p>xxxxx</p>
             <p class="price">25kr</p>
-         </div>
-         <div class="card">
+          </div>
+          <div class="card">
             <img src="img/test" alt="img2">
             <h3>Iskaffe</h3>
             <p>xxxxx</p>
@@ -83,21 +85,22 @@
             <h3>Te</h3>
             <p>xxxxx</p>
             <p class="price">25kr</p>
-      </div>
-    </div>
-  </section>
-</main>
+          </div>
+        </div>
+    </section>
+  </main>
 
 
 
-<footer>
+  <footer>
     <div class="container">
       <p>Fika & Co. || Kungsgatan 123, 123 45 Göteborg</p>
       <p>Telefon: 079-337-3506 || Email: info@fikaandco</p>
       <p>&copy; 2025 Fika & Co. Alla rättigheter förbehållna.</p>
     </div>
-</footer>
-  
-    <script src="js/main.js"></script>
-  </body>
-  </html>
+  </footer>
+
+  <script src="js/main.js"></script>
+</body>
+
+</html>
