Fixade lite buggar samt gjorde visuellt bättre

--- a/meny.html
+++ b/meny.html
@@ -26,9 +26,9 @@
   <nav class="main-nav">
     <ul>
       <li><a href="index.html">Hem</a></li>
-      <li><a href="meny.html">Meny</a></li>
+      <li><a href="meny.html" class="active">Meny</a></li>
       <li><a href="kalender.html">Kalender</a></li>
-      <li><a href="bestall.html">webb4</a></li>
+      <li><a href="bestall.html">Beställ online</a></li>
     </ul>
   </nav>
 
