--- a/bestall.html
+++ b/bestall.html
@@ -25,12 +25,12 @@
 
     <nav class="main-nav">
         <ul>
-            <li><a href="index.html">Hem</a></li>
-            <li><a href="meny.html">Meny</a></li>
-            <li><a href="kalender.html">Kalender</a></li>
-            <li><a href="bestall.html">webb4</a></li>
+          <li><a href="index.html">Hem</a></li>
+          <li><a href="meny.html">Meny</a></li>
+          <li><a href="kalender.html">Kalender</a></li>
+          <li><a href="bestall.html" class="active">Beställ online</a></li>
         </ul>
-    </nav>
+      </nav>
 
     <main>
 
