--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
   <nav class="main-nav">
     <ul>
-      <li><a href="index.html">Hem</a></li>
+      <li><a href="index.html" class="active">Hem</a></li>
       <li><a href="meny.html">Meny</a></li>
       <li><a href="kalender.html">Kalender</a></li>
-      <li><a href="bestall.html">webb4</a></li>
+      <li><a href="bestall.html">Beställ online</a></li>
     </ul>
   </nav>
 
