--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h2>Dagens erbjudanden</h2>
         <div class="card-grid">
           <div class="card">
-            <img src="img/test" alt="img1">
+            <img src="img/test2.jpg" alt="img1">
             <h3>xxx</h3>
             <p>xxxxx</p>
             <p class="price">500kr</p>
