Fortsatta med webbsida 4
Experimenterade med olika img versioner, i slutet började jag fixa contrast enligt wcag

--- a/bestall.html
+++ b/bestall.html
@@ -25,12 +25,12 @@
 
     <nav class="main-nav">
         <ul>
-          <li><a href="index.html">Hem</a></li>
-          <li><a href="meny.html">Meny</a></li>
-          <li><a href="kalender.html">Kalender</a></li>
-          <li><a href="bestall.html" class="active">Beställ online</a></li>
+            <li><a href="index.html">Hem</a></li>
+            <li><a href="meny.html">Meny</a></li>
+            <li><a href="kalender.html">Kalender</a></li>
+            <li><a href="bestall.html" class="active">Beställ online</a></li>
         </ul>
-      </nav>
+    </nav>
 
     <main>
 
@@ -103,7 +103,46 @@
             </div>
         </section>
 
+        <section class="form-section">
+            <div class="container">
+                <h2>Beställningsinformation</h2>
+                <form class="order-form">
+                    <div class="form-group">
+                        <label for="name">Namn:</label>
+                        <input type="text" id="name">
+                    </div>
 
+                    <div class="form-group">
+                        <label for="phone">Telefon:</label>
+                        <input type="text" id="phone">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email">E-post:</label>
+                        <input type="email" id="email">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="address">Adress:</label>
+                        <input type="text" id="address">
+                    </div>
+
+                    <button class="btn">Skicka beställning</button>
+                </form>
+            </div>
+        </section>
+
+        <section class="notes-section">
+            <div class="container">
+                <h2>Bra att veta</h2>
+                <ul>
+                    <li>Beställningar bör göras minst 2 timmar i förväg.</li>
+                    <li>Vid större beställningar (över 1000kr), beställ vänligen dagen innan.</li>
+                    <li>Leverans endast inom Göteborg.</li>
+                    <li>Leveransavgift är 50 kr samt 10% av beställningens pris.</li>
+                </ul>
+            </div>
+        </section>
 
 
     </main>
