--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
         <div class="card-grid">
           <div class="card">
             <img src="img/test2.jpg" alt="img1">
-            <h3>xxx</h3>
-            <p>xxxxx</p>
-            <p class="price">500kr</p>
+            <h3>Kanelbulle & Kaffe</h3>
+            <p>Njut av vår nybakade bulle med en kopp kaffe</p>
+            <p class="price">45 kr</p>
           </div>
           <div class="card">
-            <img src="img/test" alt="img2">
-            <h3>xxx</h3>
-            <p>xxxxx</p>
-            <p class="price">500kr</p>
+            <img src="img/test3.jpg" alt="img2">
+            <h3>Dagens lunch</h3>
+            <p>Vegatarisk soppa</p>
+            <p class="price">89 kr</p>
           </div>
         </div>
       </div>
