Gjorde små ändringar för accesibility, samt la till lite bilder

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <h2>Öppettider</h2>
         <div class="hours">
           <p> <strong>Måndag - Fredag:</strong> 7:00 - 18:00</p>
-          <p> <strong>Lördag: </strong>7:00 - 16:00</p>
-          <p> <strong>Lördag: </strong>7:00 - 16:00</p>
+          <p> <strong>Lördag: </strong>9:00 - 17:00</p>
+          <p> <strong>Söndag: </strong>10:00 - 16:00</p>
         </div>
       </div>
     </section>
