--- a/meny.html
+++ b/meny.html
@@ -75,13 +75,13 @@
             <p class="price">25kr</p>
           </div>
           <div class="card">
-            <img src="img/test" alt="img2">
+            <img src="img/iskaffe.jpg" alt="img2">
             <h3>Iskaffe</h3>
             <p>xxxxx</p>
             <p class="price">39kr</p>
           </div>
           <div class="card">
-            <img src="img/test" alt="img3">
+            <img src="img/te.jpg" alt="img3">
             <h3>Te</h3>
             <p>xxxxx</p>
             <p class="price">25kr</p>
