--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <h2>Dagens erbjudanden</h2>
         <div class="card-grid">
           <div class="card">
-            <img src="img/test2.jpg" alt="img1">
-            <h3>Kanelbulle & Kaffe</h3>
+            <img src="img/TestPhotoshopSlutProjekt.jpg" alt="img1">
+            <h3>Croissant & Kaffe</h3>
             <p>Njut av vår nybakade bulle med en kopp kaffe</p>
             <p class="price">45 kr</p>
           </div>
