--- a/bestall.html
+++ b/bestall.html
@@ -46,55 +46,55 @@
                 <h2>Våra produkter</h2>
                 <div class="card-grid">
                     <div class="card">
-                        <img src="img/test" alt="img1">
+                        <img src="img/Main_Croissant.jpg" alt="Croissanter">
                         <div class="product-info">
                             <h3>Croissant</h3>
-                            <p>xxxxx</p>
-                            <p class="price">20kr</p>
-                        </div>
-                        <input type="number" class="quantity-field" placeholder="Antal">
-                    </div>
-                    <div class="card">
-                        <img src="img/test" alt="img2">
-                        <div class="product-info">
-                            <h3>Kanelbulle</h3>
-                            <p>xxxxx</p>
+                            <p>Fransk croissant gjord av äkta smör</p>
                             <p class="price">25kr</p>
                         </div>
                         <input type="number" class="quantity-field" placeholder="Antal">
                     </div>
                     <div class="card">
-                        <img src="img/test" alt="img3">
+                        <img src="img/Cupcakes.jpg" alt="Cupcakes">
                         <div class="product-info">
-                            <h3>Semla</h3>
-                            <p>xxxxx</p>
-                            <p class="price">29kr</p>
+                            <h3>Cupcake</h3>
+                            <p>Handgjord med säsongens bär</p>
+                            <p class="price">19kr</p>
                         </div>
                         <input type="number" class="quantity-field" placeholder="Antal">
                     </div>
                     <div class="card">
-                        <img src="img/test" alt="img1">
+                        <img src="img/Donuts.jpg" alt="Donuts">
+                        <div class="product-info">
+                            <h3>Donut</h3>
+                            <p>Klassisk amerikansk donut med glasyr</p>
+                            <p class="price">27kr</p>
+                        </div>
+                        <input type="number" class="quantity-field" placeholder="Antal">
+                    </div>
+                    <div class="card">
+                        <img src="img/Bryggkaffe.jpg" alt="Bryggkaffe">
                         <div class="product-info">
                             <h3>Bryggkaffe</h3>
-                            <p>xxxxx</p>
+                            <p>Nybryggt kaffe från lokalt rosteri</p>
                             <p class="price">25kr</p>
                         </div>
                         <input type="number" class="quantity-field" placeholder="Antal">
                     </div>
                     <div class="card">
-                        <img src="img/test" alt="img2">
+                        <img src="img/Iskaffe.jpg" alt="Iskaffe">
                         <div class="product-info">
                             <h3>Iskaffe</h3>
-                            <p>xxxxx</p>
-                            <p class="price">39kr</p>
+                            <p>Kall espresso med is</p>
+                            <p class="price">35kr</p>
                         </div>
                         <input type="number" class="quantity-field" placeholder="Antal">
                     </div>
                     <div class="card">
-                        <img src="img/test" alt="img3">
+                        <img src="img/Te.jpg" alt="Te">
                         <div class="product-info">
                             <h3>Te</h3>
-                            <p>xxxxx</p>
+                            <p>Ekologiskt te i många smaker</p>
                             <p class="price">25kr</p>
                         </div>
                         <input type="number" class="quantity-field" placeholder="Antal">
