--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
         <h2>Dagens erbjudanden</h2>
         <div class="card-grid">
           <div class="card">
-            <img src="img/TestPhotoshopSlutProjekt.jpg" alt="img1">
+            <img src="img/Testimgphotoshopslutprojekt.jpg" alt="img1">
             <h3>Croissant & Kaffe</h3>
-            <p>Njut av vår nybakade bulle med en kopp kaffe</p>
+            <p>Njut av vår nybakade croissant med en kopp kaffe</p>
             <p class="price">45 kr</p>
           </div>
           <div class="card">
             <img src="img/test3.jpg" alt="img2">
             <h3>Dagens lunch</h3>
-            <p>Vegatarisk soppa</p>
+            <p>Vegetarisk och krämig tomat soppa</p>
             <p class="price">89 kr</p>
           </div>
         </div>
