--- a/kalender.html
+++ b/kalender.html
@@ -35,7 +35,7 @@
   <main>
     <div class="page-header">
       <div class="container">
-        <h1 class="removal">Kalendarium</h1>
+        <h1 class=>Kalendarium</h1>
       </div>
     </div>
 
