--- a/meny.html
+++ b/meny.html
@@ -44,22 +44,22 @@
         <h2>Bakverk</h2>
         <div class="card-grid">
           <div class="card">
-            <img src="img/test" alt="img1">
+            <img src="img/Main_Croissant.jpg" alt="Croissanter">
             <h3>Croissant</h3>
-            <p>xxxxx</p>
-            <p class="price">20kr</p>
-          </div>
-          <div class="card">
-            <img src="img/test" alt="img2">
-            <h3>Kanelbulle</h3>
-            <p>xxxxx</p>
+            <p>Fransk croissant gjord av äkta smör</p>
             <p class="price">25kr</p>
           </div>
           <div class="card">
-            <img src="img/test" alt="img3">
-            <h3>Semla</h3>
-            <p>xxxxx</p>
-            <p class="price">29kr</p>
+            <img src="img/Cupcakes.jpg" alt="Cupcakes">
+            <h3>Cupcake</h3>
+            <p>Handgjord med säsongens bär</p>
+            <p class="price">19kr</p>
+          </div>
+          <div class="card">
+            <img src="img/Donuts.jpg" alt="Donuts">
+            <h3>Donut</h3>
+            <p>Klassisk amerikansk donut med glasyr</p>
+            <p class="price">27kr</p>
           </div>
         </div>
     </section>
@@ -69,21 +69,21 @@
         <h2>Dryck</h2>
         <div class="card-grid">
           <div class="card">
-            <img src="img/test" alt="img1">
+            <img src="img/Bryggkaffe.jpg" alt="Bryggkaffe">
             <h3>Bryggkaffe</h3>
-            <p>xxxxx</p>
+            <p>Nybryggt kaffe från lokalt rosteri</p>
             <p class="price">25kr</p>
           </div>
           <div class="card">
-            <img src="img/iskaffe.jpg" alt="img2">
+            <img src="img/Iskaffe.jpg" alt="Iskaffe">
             <h3>Iskaffe</h3>
-            <p>xxxxx</p>
-            <p class="price">39kr</p>
+            <p>Kall espresso med is</p>
+            <p class="price">35kr</p>
           </div>
           <div class="card">
-            <img src="img/te.jpg" alt="img3">
+            <img src="img/Te.jpg" alt="Te">
             <h3>Te</h3>
-            <p>xxxxx</p>
+            <p>Ekologiskt te i många smaker</p>
             <p class="price">25kr</p>
           </div>
         </div>
