Arbetade vidare med bilder, små kodändringar

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         <h2>Dagens erbjudanden</h2>
         <div class="card-grid">
           <div class="card">
-            <img src="img/Testimgphotoshopslutprojekt.jpg" alt="img1">
+            <img src="img/Kaffe-Croissant-Photoshop.jpg" alt="Kaffe med croissant">
             <h3>Croissant & Kaffe</h3>
             <p>Njut av vår nybakade croissant med en kopp kaffe</p>
             <p class="price">45 kr</p>
           </div>
           <div class="card">
-            <img src="img/test3.jpg" alt="img2">
+            <img src="img/Tomatsoppa.jpg" alt="Vegetarisk tomatsoppa">
             <h3>Dagens lunch</h3>
             <p>Vegetarisk och krämig tomat soppa</p>
             <p class="price">89 kr</p>
