--- a/kalender.html
+++ b/kalender.html
@@ -35,7 +35,7 @@
   <main>
     <div class="page-header">
       <div class="container">
-        <h1 class=>Kalendarium</h1>
+        <h1>Kalendarium</h1>
       </div>
     </div>
 
@@ -112,18 +112,18 @@
           <div class="event-item">
             <div class="event-date">10 Februari</div>
             <div class="event-info">
-            <h3>Baka Surdegsbröd Workshop</h3>
-            <p>17:00-19:30</p>
-            <p>Lär dig baka surdegsbröd från vår bagare</p>
-          </div>
+              <h3>Baka Surdegsbröd Workshop</h3>
+              <p>17:00-19:30</p>
+              <p>Lär dig baka surdegsbröd från vår bagare</p>
+            </div>
           </div>
           <div class="event-item">
             <div class="event-date">14 Februari</div>
             <div class="event-info">
               <h3>Vin & Choklad Provning</h3>
-            <p>18:30-20:00</p>
-            <p>En kväll med vinprovning och handgjord choklad</p>
-          </div>
+              <p>18:30-20:00</p>
+              <p>En kväll med vinprovning och handgjord choklad</p>
+            </div>
           </div>
           <div class="event-item">
             <div class="event-date">25 Februari</div>
