--- a/meny.html
+++ b/meny.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <title>Document</title>
+  <title>Meny</title>
 </head>
 
 <body class="menu-page">
@@ -62,6 +62,7 @@
             <p class="price">27kr</p>
           </div>
         </div>
+        </div>
     </section>
 
     <section class="drinks">
@@ -87,6 +88,7 @@
             <p class="price">25kr</p>
           </div>
         </div>
+      </div>
     </section>
   </main>
 
